--- a/bumpcall.html
+++ b/bumpcall.html
@@ -18,12 +18,14 @@
     <!-- facebook tags -->
     <meta property="og:title" content="Andy Vo">
     <meta property="og:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
-    <meta property="og:image" content="https://drive.google.com/file/d/1u5vTQn9-uYoThbWux5g0MjbHYaKIH7hP/view?usp=sharing">
+    <meta property="og:image" content="https://andyvo.com/images/andyvo_tree_fb.png">
     <!-- twitter tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Andy Vo">
     <meta property="twitter:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
-    <meta property="twitter:image" content="https://drive.google.com/file/d/17TrFxM-U0b-KrE-b91iDm38GZYnRolYh/view?usp=sharing">
+    <meta property="twitter:image" content="https://andyvo.com/images/andyvo_tree_tw.png">
+    <meta property="og:url" content="https://andyvo.com/">
+    <meta property="og:type" content="website">
     <!-- for mobile themes i think -->
     <meta name="theme-color" content="#2A2A2A">
 
@@ -91,8 +93,8 @@
                     <h3><b>Overview</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <h4 class="h4sub">BU CS Ambassadors (BUCSA) hosted a web design competition to redesign their entire website.</h4>
-                    <p>Over the course of two weeks, my team and I came together to create the new face for BUCSA. As a student group that aimed to build connections through mentorship, our goal was not only to add color to a website, but to develop layers of depth in the meaning of their brand. Although I was the only web developer on the team, AKA Designs was successful in earning <b>first place</b> for our project.</p>
+                    <h4 class="h4sub">Stage #2 startup <a href="https://bumpcall.com/" target="_blank">bumpcall</a> sought to redefine the approach to communication and needed Digital Design Interns to make that happen.</h4>
+                    <p>That's where I came in. bumpcall's goal was to change communication by turning "bumps on the street" to five-minute FaceTime calls. The founders realized that there was a need to change the way we talk, to decrease the looming anxiety of waiting for texts and not knowing when to call. Through the pandemic, bumpcall was born. Joining bumpcall early on, I made the most of my knowledge from hackathon and designathon competitions and saw this as an opportunity to put my UI/UX design skills to work through countless iterations.</p>
                 </div>
             </div>
             <div class="cs_content">
@@ -100,7 +102,7 @@
                     <h3><b>My Contribution</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <p>The timing of the project fell right after finals week for Boston University students. My teammates, Alice and Katie, were occupied with vacation plans and internship transitions, and so I took the lead product designer role in this endeavor. Furthermore, I developed the entire website using HTML, CSS, and JavaScript, implementing a Node.js back-end on an Express.js framework to add functionality to a mailing list and contact form.</p>
+                    <p>As one of two interns for a startup, I took on a big position as someone who would make significant design decisions. Weekly, we would discuss with one of the cofounders and run through new iterations of pieces of the app we designed. Given that the mobile app only had a few iterations of the MVP to begin with, I was able to design numerous pages, states, components, and iterations of the product. As my junior spring semester came to a close, I was brought on as Director of Product Design briefly to continue my work with the designs before finally parting ways.</p>
                 </div>
             </div>
             <div class="cs_content">
@@ -108,11 +110,11 @@
                     <h3><b>Our Solution</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <p>Our solution was both a full website redesign that <b>emphasized the focus on the mentor-mentee program.</b> It utilized modern design trends and pulled from the Boston University design system with the reds and blacks to visually appeal to incoming computer science students. Find the demo video further below and the GitHub repo <a href="https://github.com/andyyvo/bucsawebdesign">here.</a></p>
+                    <p>With only a few prototyped screens ranging from opening the app to "bumping into someone", my job as an intern was to <b>redesign the entire app</b>. Researching the psychology and cognitive processes of friendships, of reaching out to someone in-person and digitally, and of running into someone, our solution was to bring new life to the product with new colors, new interactions, and new conversations.</p>
                 </div>
             </div>
             <div class="cs_overview_img">
-                <img src="/images/casestudy_imgs_bucsa/three_devices.png" alt="BUCSA Redesign Mockups">
+                <img src="/images/casestudy_imgs_bump/bump_two_screen.png" alt="bumpcall launch and main screen mockups" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
             </div>
         </section>
         <section class="casestudy_section silverblueback">
@@ -122,28 +124,39 @@
                     <h3><b>Problem</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <h4 class="h4sub">BUCSA had a WordPress website that simply was not attracting incoming students.</h4>
-                    <p>The initiative behind the competition, according to the kickoff presentation, was that BUCSA was in the process of getting their own official BU domain and saw this as an opportunity to rebuild the website from scratch for more control and flexibility.</p>
+                    <h4 class="h4sub">Texting is hard — you don't want to spam but seeing that iMessage bubble or read receipt is stressful — and spontaneously calling/FaceTiming isn't any easier.</h4>
+                    <p>Being left on read, misinterpreting a message, coming off as needy, admitting to ourselves we don't communicate as much as we feel we should, not knowing what to talk about... so many factors can come into play nowadays. <a href="https://thekeep.eiu.edu/cgi/viewcontent.cgi?article=3185&context=theses">Correlational analysis</a> on the relationships between text messaging and social psychology shows a significant negative relationship between self-perception of text message dependancy and self-esteem. Similarly, the study shows a positively linked correlation between text messaging and social anxiety.</p>
                     <br>
-                    <p>Unfortunately, both as someone who isn't affiliated with BUCSA and as a UX designer doing their research, there was not too much information to work with.</p>
+                    <p>With most folks, especially young adults in school or college, on their electronic devices for more than 5 hours a day during the pandemic, a <a href="https://journals.sagepub.com/doi/full/10.1177/2167702617723376">study</a> shows that 48 percent of teens spending at least five hours per day on an electronic device have at least one suicide risk factor. The short story is that it's complicated, but an attachment to our devices has led to a digital "FOMO", or fear of missing out, and we see it in texting, messaging, etc.</p>
+                    <div class="quotecard">
+                        <p><i>"I hate the game - am I responding too quick, am I taking too long? I don’t want to be seen as needy because that makes me not worthwhile."</i></p>
+                        <br>
+                        <p>—Yugan</p>
+                    </div>
+                    <div class="quotecard">
+                        <p><i>"[I prefer] calling … I usually text because it’s the norm. I’ve called people who have told me it’s the first time they heard their ringtone in literal years."</i></p>
+                        <br>
+                        <p>—Jack</p>
+                    </div>
                 </div>
             </div>
-            <div id="original_wordpress_grid">
-                <img src="/images/casestudy_imgs_bucsa/original_wordpress1.png" alt="BUCSA Original WordPress Website Screenshots">
-                <img src="/images/casestudy_imgs_bucsa/original_wordpress2.png" alt="BUCSA Original WordPress Website Screenshots">
-                <img src="/images/casestudy_imgs_bucsa/original_wordpress3.png" alt="BUCSA Original WordPress Website Screenshots">
-                <img src="/images/casestudy_imgs_bucsa/original_wordpress4.png" alt="BUCSA Original WordPress Website Screenshots">
-                <img src="/images/casestudy_imgs_bucsa/original_wordpress5.png" alt="BUCSA Original WordPress Website Screenshots">
+            <div class="cs_content">
+                <div class="cs_content_title">
+                    <h3><b>Past Iterations</b></h3>
+                </div>
+            </div>
+            <div class="griditem twocol">
+                <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bump/bump_old1.png" alt="old bumpcall iterations">
+                <img class="figma_cs_imgs2" src="/images/casestudy_imgs_bump/bump_old2.png" alt="old bumpcall iterations">
             </div>
             <div class="cs_content">
                 <div class="cs_content_title">
                     <h3><b>Challenges</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <p>With a lack of content material, design system, and time to work with, I put together a goal-oriented approach that would let me research, design, and implement within the two-week timeframe. To meet the BU website requirement, I drew inspiration from <a href="https://www.bu.edu/" target="_blank">Boston University</a>, <a href="https://www.bu.edu/cs/" target="_blank">BU Department of Computer Science</a>, and student groups including <a href="https://www.bu.edu/csc/fysop/" target="_blank">FYSOP</a>, <a href="https://www.buakpsi.com/" target="_blank">BU AKPsi</a>, and <a href="https://www.axs-bu.com/" target="_blank">BU AXS</a> (I designed this website too, but it uses Squarespace).</p>
+                    <p>Born out of boredom, bumpcall aims to address the consistent and ever-growing anxiety of digital communication. As an ambitious, enthusiastic, and young user experience designer, bumpcall was <b>my first opportunity into the industry as an intern</b>. At first, I felt like there was a lot riding on this, even though it was <i>unpaid</i>.</p>
                     <br>
-                    <h4 class="h4sub">Website Desirables</h4>
-                    <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/figma_list_of_desirables.png" alt="List of Desirables Requested Drafted on Figma">
+                    <p>Beyond my personal desires and challenges, some initial challenges with bumpcall was the disagreement of what the bumpcall brand was to become. There was simply <b>an overwhelming amount of orange and the wireframe designs felt a bit dated</b>, so communicating suggestions for redesigns was met with resistance by the lead Product Designer who was one of the co-founders. While neither of us had formal design experience, I had collections of past designs from competitions to justify my ideas and eventually meet in the middle with the co-founder.</p>
                 </div>
             </div>
         </section>
@@ -154,9 +167,9 @@
                     <h3><b>Audience</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <p><b>BUCSA</b> is a student organization whose mission is to serve as a platform for a more collaborative, inclusive, and unified computer science community.</p>
+                    <p>Upon onboarding and discussing the purpose of the product, it came to my mind that bumpcall would best serve the <b>college student population</b>, followed by students in general. This young demographic would be best suited to pitch bumpcall to because of students' daily interactions with each other, seeing each other on campus, in the hallways, libraries, dining halls, study lounges, on the sidewalks, etc. Given that isolation due to COVID-19 was one of the factors that gave rise to bumpcall, students have been one of the most impacted demographics with classes being held virtually and most colleges and universities opting out of reopening campus.</p>
                     <br>
-                    <p>We were able to hold a few chats and conversations with 4 students ranging from BUCSA members to BU students. Focusing primarily on the interests of our client, we wanted to better understand the pain points of the current system and in broader scope, what the mission of BUCSA is to form user personas.</p>
+                    <p>The premise of bumpcall is to bridge this loss of social interaction and communication via a spontaneous 5-minute video call to imitate that face-to-face coincidental meetup. I find that bumpcall's <b>"bump"</b> feature best fits the student culture and atmosphere due to the frequency and carefree nature of those in real-life interactions. Bumping on bumpcall is a social interaction, not a business meeting.</p>
                 </div>
             </div>
             <div class="cs_content">
