--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     <!-- facebook tags -->
     <meta property="og:title" content="Andy Vo">
     <meta property="og:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
-    <meta property="og:image" content="https://drive.google.com/file/d/1u5vTQn9-uYoThbWux5g0MjbHYaKIH7hP/view?usp=sharing">
+    <meta property="og:image" content="https://andyvo.com/images/andyvo_tree_fb.png">
+    <meta property="og:url" content="https://andyvo.com/">
+    <meta property="og:type" content="website">
     <!-- twitter tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Andy Vo">
     <meta property="twitter:description" content="Andy Vo is a Product/UX Designer and Front-End Developer studying Computer Science at Boston University, passionate about creating experiences that bring users together through accessible design.">
-    <meta property="twitter:image" content="https://drive.google.com/file/d/17TrFxM-U0b-KrE-b91iDm38GZYnRolYh/view?usp=sharing">
+    <meta property="twitter:image" content="https://andyvo.com/images/andyvo_tree_tw.png">
     <!-- for mobile themes i think -->
     <meta name="theme-color" content="#2A2A2A">
 
