--- a/bucsambassadors.html
+++ b/bucsambassadors.html
@@ -119,7 +119,8 @@
                 <img src="/images/casestudy_imgs_bucsa/three_devices.png" alt="BUCSA Redesign Mockups">
             </div>
         </section>
-        <section class="casestudy_section silverblueback">
+        <hr>
+        <section class="casestudy_section whiteback">
             <h2 class="cs_header">Kickoff</h2>
             <div class="cs_content">
                 <div class="cs_content_title">
@@ -151,6 +152,7 @@
                 </div>
             </div>
         </section>
+        <hr>
         <section class="casestudy_section whiteback">
             <h2 class="cs_header">Research</h2>
             <div class="cs_content">
@@ -187,7 +189,8 @@
                 </div>
             </div>
         </section>
-        <section class="casestudy_section silverblueback">
+        <hr>
+        <section class="casestudy_section whiteback">
             <h2 class="cs_header">Personas</h2>
             <div id="personas_flex">
                 <div class="personas_content">
@@ -210,6 +213,7 @@
                 </div>
             </div>
         </section>
+        <hr>
         <section class="casestudy_section whiteback">
             <h2 class="cs_header">Design</h2>
             <div class="cs_content">
@@ -300,7 +304,8 @@
                 </div>
             </div>
         </section>
-        <section class="casestudy_section silverblueback">
+        <hr>
+        <section class="casestudy_section whiteback">
             <h2 class="cs_header">Reflection</h2>
             <div class="cs_content">
                 <div class="cs_content_title">
