--- a/bumpcall.html
+++ b/bumpcall.html
@@ -117,7 +117,8 @@
                 <img src="/images/casestudy_imgs_bump/bump_two_screen.png" alt="bumpcall launch and main screen mockups" style="display: block; margin-left: auto; margin-right: auto; max-width: 600px;">
             </div>
         </section>
-        <section class="casestudy_section silverblueback">
+        <hr>
+        <section class="casestudy_section whiteback">
             <h2 class="cs_header">Kickoff</h2>
             <div class="cs_content">
                 <div class="cs_content_title">
@@ -160,6 +161,7 @@
                 </div>
             </div>
         </section>
+        <hr>
         <section class="casestudy_section whiteback">
             <h2 class="cs_header">Research</h2>
             <div class="cs_content">
@@ -177,35 +179,41 @@
                     <h3><b>Questions</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <p>Before I started to formulate the steps I would take to put everything together, I brainstormed several questions on Figma to pose to both myself and the client.</p>
-                    <img class="figma_cs_imgs" src="/images/casestudy_imgs_bucsa/figma_initial_qs.png" alt="Initial Questions Drafted on Figma">
-                    <h4 class="h4sub">How might we...</h4>
-                    <p>Accumulating my research together, I drafted some <i>"How might we..."</i> statements to drive the project in the right direction. The short timeframe meant that answering each question had to produce a lot of content ideally.</p>
+                    <h4 class="h4sub">Competitive Analysis</h4>
+                    <p>While I understood that the co-founders had done their research, I still didn't understand a few things that made this product stand out. The initiative was a great idea, but I wondered how this was in market demand.</p>
                     <br>
-                    <p><i>"How might we increase the retention rate/decrease the bounce rate of users from the landing screen?"</i></p>
-                    <p><i>"How might we draw more attention to the mentorship program?"</i></p>
-                    <p><i>"How might we limit the number of clicks to traverse across the website?"</i></p>
-                    <p><i>"How might we emphasize the importance of joining student groups?"</i></p>
+                    <p><i>"What made this different from sporadically calling or FaceTiming my friends?"</i></p>
+                    <p><i>"There's so many messaging platforms so are we entering a saturated market head-on?"</i></p>
+                    <p><i>"Is it possible to hit the bump and just not bump into anyone?"</i></p>
+                    <br>
+                    <br>
+                    <h4 class="h4sub">How might we...</h4>
+                    <p>Accumulating my research together, I drafted some <i>"How might we..."</i> statements to drive the project in the right direction.</p>
+                    <br>
+                    <p><i>"How might we differentiate ourselves from FaceTime?"</i></p>
+                    <p><i>"How might we connect more people together who might not be the best of friends?"</i></p>
+                    <p><i>"How might we invite more users to the product or get users to share with friends?"</i></p>
                 </div>
             </div>
             <div class="cs_content">
                 <div class="cs_content_title">
                     <h3><b>Goal</b></h3>
                     <br>
-                    <h3><b><span class="highlightBlue">How do we create an experience for BU CS students to drive a need for a community through the Ambassadors platform?</span></b></h3>
+                    <h3><b><span class="highlightRed">How do we bring users together in a way that connects people in a spontaneous "bump on the street"-like fashion amidst the pandemic?</span></b></h3>
                 </div>
             </div>
         </section>
-        <section class="casestudy_section silverblueback">
+        <hr>
+        <section class="casestudy_section whiteback">
             <h2 class="cs_header">Personas</h2>
             <div id="personas_flex">
                 <div class="personas_content">
-                    <img src="/images/casestudy_imgs_bucsa/student.png" alt="Boston University Student">
-                    <p><b>A BU student interested in joining BUCSA</b></p>
+                    <img src="/images/casestudy_imgs_bump/bump_caller.png" alt="bumpcall user calling">
+                    <p><b>A user making the bump</b></p>
                 </div>
                 <div class="personas_content">
-                    <img src="/images/casestudy_imgs_bucsa/ambassador.png" alt="BU CS Ambassador">
-                    <p><b>A BU CS Ambassador</b></p>
+                    <img src="/images/casestudy_imgs_bump/bump_calling.png" alt="bumpcall user calling">
+                    <p><b>A user receiving the bump</b></p>
                 </div>
             </div>
             <div class="cs_content">
@@ -213,12 +221,16 @@
                     <h3><b>Key Takeaways</b></h3>
                 </div>
                 <div class="cs_content_text">
-                    <p>While we knew it was critical to focus on the students who would be interested in getting involved as an Ambassador or the mentorship program, <b>we also discovered that other Ambassadors would be using the website</b> during our research.</p>
+                    <p>When mapping out the user flow of the different routes one might take with bumpcall, it came to our attention that, like introverts and extroverts, <b>we would have users who will be making the calls and users who would receive the calls</b>.</p>
                     <br>
-                    <p>Although a login system with content and features limited only to members was a listed desirable by the client, <b>we recognized that the limited scope of the two week timeframe made it infeasible to integrate</b>. As a result, our efforts were allocated to emphasize a resources page for both current and prospective members.</p>
+                    <p>This distinction became exceptionally clear when the initial prototype had a plain spinning circle upon hitting the <b>bump button</b> in the middle. Users initiating the bump were told that they wait between 20 seconds to several minutes. That is a prime opportunity to make the most out of, but should be limited given that the wait is so variable.</p>
+                    <br>
+                    <p><i>What should a user do in this "waiting room" state?</i></p>
+                    <p><i>How can we keep a user engaged with the product here while they wait for someone to bump into?</i></p>
                 </div>
             </div>
         </section>
+        <hr>
         <section class="casestudy_section whiteback">
             <h2 class="cs_header">Design</h2>
             <div class="cs_content">
@@ -309,7 +321,8 @@
                 </div>
             </div>
         </section>
-        <section class="casestudy_section silverblueback">
+        <hr>
+        <section class="casestudy_section whiteback">
             <h2 class="cs_header">Reflection</h2>
             <div class="cs_content">
                 <div class="cs_content_title">
